--- a/buszy/art.html
+++ b/buszy/art.html
@@ -210,6 +210,22 @@
         line-height: 30px;
         background-color: #2e2e2e;
     }
+
+    @media (max-width: 576px) {
+        .fleet-legend {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            justify-content: center;
+            margin-top: 1em;
+            padding-bottom: 1em;
+
+        }
+
+        .fleet-legend span {
+            font-size: 12px;
+        }
+    }
 </style>
 
 <body>
