--- a/worksbynrfz/buszy.html
+++ b/worksbynrfz/buszy.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/9tt1J7l.png');
+    background-image: url('https://i.imgur.com/3DcTWDA.png');
     height: 75vh;
   }
 </style>
@@ -301,13 +301,13 @@
   <div class="wrapper">
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/8A4KosG.png" class="portfolio-img" data-gallery="carousel" id="bsz1">
-          <img class="img-fluid" src="https://i.imgur.com/8A4KosG.png" alt="bsz1-img" draggable="false" id="bsz1-img">
+        <a href="https://i.imgur.com/SMCr2oe.png" class="portfolio-img" data-gallery="carousel" id="bsz1">
+          <img class="img-fluid" src="https://i.imgur.com/SMCr2oe.png" alt="bsz1-img" draggable="false" id="bsz1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/9NpbvWN.png" class="portfolio-img" data-gallery="carousel" id="bsz2">
-          <img class="img-fluid" src="https://i.imgur.com/9NpbvWN.png" alt="bsz2-img" draggable="false" id="bsz2-img">
+        <a href="https://i.imgur.com/yDqSZ2E.png" class="portfolio-img" data-gallery="carousel" id="bsz2">
+          <img class="img-fluid" src="https://i.imgur.com/yDqSZ2E.png" alt="bsz2-img" draggable="false" id="bsz2-img">
         </a>
       </div>
       <div class="carousel-cell">
@@ -315,6 +315,10 @@
           <img class="img-fluid" src="https://i.imgur.com/FQgAbIh.png" alt="bsz3-img" draggable="false" id="bsz3-img">
         </a>
       </div>
+      <div class="carousel-cell">
+        <a href="https://i.imgur.com/aSrc8OZ.png" class="portfolio-img" data-gallery="carousel" id="bsz4">
+          <img class="img-fluid" src="https://i.imgur.com/aSrc8OZ.png" alt="bsz4-img" draggable="false" id="bsz4-img">
+        </a>
     </div>
   </div>
 
@@ -463,33 +467,42 @@
       const bsz3_link = document.getElementById('bsz3');
       const bsz3_img = document.getElementById('bsz3-img');
 
+      const bsz4_link = document.getElementById('bsz4');
+      const bsz4_img = document.getElementById('bsz4-img');
+
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/9tt1J7l.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/3DcTWDA.png')";
 
-        bsz1_link.href = 'https://i.imgur.com/BaEaY58.png';
-        bsz1_img.src = 'https://i.imgur.com/BaEaY58.png';
+        bsz1_link.href = 'https://i.imgur.com/VQgauU6.png';
+        bsz1_img.src = 'https://i.imgur.com/VQgauU6.png';
 
-        bsz2_link.href = 'https://i.imgur.com/JV8jzsN.png';
-        bsz2_img.src = 'https://i.imgur.com/JV8jzsN.png';
+        bsz2_link.href = 'https://i.imgur.com/BAE7d2M.png';
+        bsz2_img.src = 'https://i.imgur.com/BAE7d2M.png';
 
         bsz3_link.href = 'https://i.imgur.com/TajBbwn.png';
         bsz3_img.src = 'https://i.imgur.com/TajBbwn.png';
+        
+        bsz4_link.href = 'https://i.imgur.com/No8bZfD.png';
+        bsz4_img.src = 'https://i.imgur.com/No8bZfD.png';
 
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/9tt1J7l.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/3DcTWDA.png')";
 
-        bsz1_link.href = 'https://i.imgur.com/8A4KosG.png';
-        bsz1_img.src = 'https://i.imgur.com/8A4KosG.png';
+        bsz1_link.href = 'https://i.imgur.com/SMCr2oe.png';
+        bsz1_img.src = 'https://i.imgur.com/SMCr2oe.png';
 
-        bsz2_link.href = 'https://i.imgur.com/9NpbvWN.png';
-        bsz2_img.src = 'https://i.imgur.com/9NpbvWN.png';
+        bsz2_link.href = 'https://i.imgur.com/yDqSZ2E.png';
+        bsz2_img.src = 'https://i.imgur.com/yDqSZ2E.png';
 
         bsz3_link.href = 'https://i.imgur.com/92W7KRL.png';
         bsz3_img.src = 'https://i.imgur.com/92W7KRL.png';
+
+        bsz4_link.href = 'https://i.imgur.com/aSrc8OZ.png';
+        bsz4_img.src = 'https://i.imgur.com/aSrc8OZ.png';
 
       }
     }
