--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -12,6 +12,9 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#007bff">
+
     <link rel="icon" href="../img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
@@ -60,6 +63,27 @@
         border: none;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
         background-color: #bb2d3b;
+    }
+
+    .btn-install {
+        position: relative;
+        z-index: 1;
+        min-width: 50px;
+        width: 170px;
+        height: 46px;
+        line-height: 46px;
+        font-size: 14px;
+        font-weight: 500;
+        display: inline-block;
+        padding: 0 30px;
+        text-align: center;
+        text-transform: capitalize;
+        color: #fff;
+        border-radius: 60px;
+        transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        border: none;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+        background-color: #1f84a2;
     }
 
     .btn-rfetch:focus,
@@ -247,7 +271,8 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle" title="Pinned"></i>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"
+                                    title="Pinned"></i>
                             </a>
                         </li>
 
@@ -316,6 +341,14 @@
                 <li class="list-group-item">
                     <button id="clear-cache-btn" class="btn btn-rfetch">Re-fetch data</button><br>
                     <p class="fetch">Clear cached bus stop data to ensure you have the latest information.</p>
+                </li>
+            </ul>
+
+            <h2 class="text-center" style="padding-top: 1em;">Miscellaneous</h2>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <button id="install-btn" class="btn btn-install">Install App</button><br>
+                    <p class="fetch">Install this web app on your device for a better experience.</p>
                 </li>
             </ul>
         </div>
