--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -12,6 +12,8 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
+    <link rel="manifest" href="../manifest.json">
+
     <link rel="icon" href="../img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
